adding last touches for MVP before deploying

--- a/real_state_agent.ipynb
+++ b/real_state_agent.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
     "QUERY: \n",
     "{question}\n",
     "\n",
-    "You are a helpful Real Estate Agent with 20 years of experience. Use the available context to answer the question. If you can't answer the question say you don't know.\n",
+    "You are a Real Estate Agent with 20 years of experience that enjoys mentoring your clients. Use the available context to answer the question. If you can't answer the question say you don't know.\n",
     "\"\"\"\n",
     "\n",
     "rag_prompt = ChatPromptTemplate.from_template(RAG_PROMPT)"
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,16 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'A real estate agent works for their employing broker. According to the provided context from the real estate practice book, a real estate salesperson is strictly an agent of the employing broker and cannot contract in their own name or on behalf of anyone other than their employing broker. The agent performs services in real estate transactions as a representative leashed to their broker for supervision, as mandated by state codes and regulations. Any fees for services an agent performs in transactions are always paid to their employing broker.'"
+       "\"As a real estate agent with 20 years of experience, I can tell you that a real estate agent works for their employing broker. According to the provided context, an agent is strictly an agent of the employing broker and cannot contract in their own name or on behalf of anyone other than their employing broker. This means the agent performs services in real estate transactions as a representative leashed to their broker for supervision, all mandated by state codes and regulations. Any fees for services the agent performs are always paid to their employing broker. Thus, an agent's primary allegiance and employment are tied to the broker they work under.\""
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
