adding updates to notebook

--- a/real_state_agent.ipynb
+++ b/real_state_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,58 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total split into 1604 documents\n",
-      "First document: page_content='agent, while the sales agent is the “agent of the (buyer’s) agent.”1 [See RPI \n",
-      "Form 305 §3]\n",
-      "Historically, and incorrectly, the broker and their agent who represented \n",
-      "a buyer in a sales transaction were — but no longer are — referred to \n",
-      "as subagents within the residential multiple listing service (MLS) \n",
-      "brokerage community until the late 1980s. The misnomer was a product of \n",
-      "the pre-1980s MLS environment. As the genesis, it was said all brokers (and \n",
-      "their agents) who were members of a trade union’s MLS were automatically \n",
-      "“seller’s agents.” Thus, MLS subscribers working directly with a buyer were \n",
-      "merely subagents employed by the seller to sell a property listed in the MLS \n",
-      "through the seller’s primary broker. \n",
-      "1\t  Calif. Civil Code §2079.13(n)\n",
-      "An industry-\n",
-      "wide \n",
-      "membership \n",
-      "misconception \n",
-      " \n",
-      "subagent \n",
-      "An individual who \n",
-      "has been delegated \n",
-      "agency duties by a \n",
-      "broker employed by \n",
-      "a client, not the client \n",
-      "themselves.\n",
-      "Agency Law Disclosure \n",
-      "double-end\n",
-      "multiple listing service (MLS)\n",
-      "price fixing\n",
-      "subagent\n",
-      "supra-competitive\n",
-      "Key Terms\n",
-      "Learning \n",
-      "Objectives' metadata={'source': 'assets/real_estate_book_practice.pdf', 'file_path': 'assets/real_estate_book_practice.pdf', 'page': 39, 'total_pages': 596, 'format': 'PDF 1.6', 'title': '', 'author': '', 'subject': '', 'keywords': '', 'creator': 'Adobe InDesign 18.1 (Windows)', 'producer': 'Adobe PDF Library 17.0', 'creationDate': \"D:20230224151521-08'00'\", 'modDate': \"D:20230427153609-07'00'\", 'trapped': ''}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"total split into {len(split_chunks)} documents\")\n",
-    "print(f\"First document: {split_chunks[100]}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,24 +162,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"As a real estate agent with 20 years of experience, I can tell you that a real estate agent works for their employing broker. According to the provided context, an agent is strictly an agent of the employing broker and cannot contract in their own name or on behalf of anyone other than their employing broker. This means the agent performs services in real estate transactions as a representative leashed to their broker for supervision, all mandated by state codes and regulations. Any fees for services the agent performs are always paid to their employing broker. Thus, an agent's primary allegiance and employment are tied to the broker they work under.\""
+       "\"In a real estate transaction, the fiduciary duties of an agent are critical responsibilities that the agent owes to their client. These duties require the agent to act in the highest good faith towards their client. Specifically, the fiduciary duties include:\\n\\n1. **Loyalty and Good Faith**: The agent must act in the best interests of the client and not obtain any advantage over the client through misrepresentation, concealment, duress, or undue influence.\\n\\n2. **Utmost Care, Integrity, and Honesty**: The agent is expected to maintain high standards of care, integrity, and honesty while dealing with the client and all parties involved in the transaction.\\n\\n3. **Disclosure**: The agent must disclose all relevant information that affects the value and desirability of the property, ensuring fair dealing and good faith in their interactions.\\n\\nThese duties are essential to maintain trust and ensure that the client's interests are protected throughout the real estate transaction.\""
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#testing the chain\n",
-    "rag_chain.invoke({\"question\": \"who does a real estate agent work for?\"})"
+    "rag_chain.invoke({\"question\": \"what are the fiduciary duties of a real estate agent?\"})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
